--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "debugger.js",
   "scripts": {
     "dev:mini-rollup": "nodemon debugger.js",
-    "test:mini-rollup": "node dist/bundle.js"
+    "test:mini-rollup": "jest"
   },
   "nodemonConfig": {
     "ignore": [
@@ -17,5 +17,8 @@
   "dependencies": {
     "acorn": "^8.4.1",
     "magic-string": "^0.25.7"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
